--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ __pycache__/
 *$py.class
 *.so
 .Python
+env/
+venv/
+ENV/
 build/
 develop-eggs/
 dist/
@@ -20,10 +23,12 @@ wheels/
 .installed.cfg
 *.egg
 
-# Virtual Environment
-venv/
-env/
-ENV/
+# Flask
+instance/
+.webassets-cache
+
+# Environment variables
+.env
 .venv
 
 # IDE
@@ -37,22 +42,6 @@ ENV/
 .DS_Store
 Thumbs.db
 
-# Flask
-instance/
-.webassets-cache
-
-# Environment variables
-.env
-.env.local
-
-# Logs
-*.log
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-
+# Data files (optional - uncomment if you don't want to commit data)
+# data/*.csv
+# data/*.json
